# retraining-press-review

./: .gitignore  README.md
.github/workflows/: tests.yml
backend/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ba79f79c518_init.py  7deb1a75fa2d_add_press_reviews_table.py
backend/src/: config.py  database.py  exceptions.py  main.py  models.py
backend/src/clients/: worldnews_client.py
backend/src/models/: __init__.py  base.py  conversations.py  press_review.py  top_news.py  users.py
backend/src/routers/: auth.py  conversations.py
backend/src/schemas/: auth.py  conversations.py  news.py  press_review.py  response.py  users.py
backend/src/scripts/: init_db.py  scripts.py
backend/src/services/: ai_service.py  news_service.py  press_review_service.py  scraping_service.py
backend/src/tests/: conftest.py  test_conversations_authorization.py
backend/src/utils/: conversations.py  security.py
docs/: AMELIORATIONS.md  BACKEND.md  FLUX.md  FRONTEND.md  PROMPTS.md
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/public/animations/: loading.json  spinner.json  writing.json
frontend/src/: proxy.ts
frontend/src/actions/: auth.ts  chat.ts  pressReviews.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/app/: HomePage.module.css  page.tsx
frontend/src/app/(auth)/: AuthLayout.module.css  layout.tsx
frontend/src/assets/Icons/: CalendarIcon.tsx  ChatIcon.tsx  LogoIcon.tsx  LogoutIcon.tsx  MascotIcon.tsx  SendIcon.tsx  UserIcon.tsx
frontend/src/components/ChatGreetings/: ChatGreetings.module.css  ChatGreetings.tsx
frontend/src/components/ChatLayout/: ChatLayout.module.css  ChatLayout.tsx
frontend/src/components/ChatListItem/: ChatListItem.module.css  ChatListItem.tsx
frontend/src/components/ChatMessage/: ChatMessage.module.css  ChatMessage.tsx
frontend/src/components/Icons/: CalendarIcon.tsx  ChatIcon.tsx  DocIcon.tsx  MascotTiltedIcon.tsx
frontend/src/components/PressReview/: PressReview.module.css  PressReview.tsx
frontend/src/hooks/: useChat.ts  useChatManager.ts
frontend/src/models/: authModel.ts  chatModel.ts  pressReviewModel.ts  pydanticAiHistory.ts
frontend/src/schemas/: apiSchema.ts  authSchemas.ts  chatSchema.ts  pressReviewSchema.ts
frontend/src/services/: clientApi.ts  serverApi.ts
frontend/src/utils/: apiResult.ts  httpError.ts  parseHistory.ts  timeUtils.ts
(+28 files in other folders)
