[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "bcrypt>=4.3.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
db = "scripts.scripts:start_db"
api = "main:start"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scripts"]