[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "bcrypt>=4.3.0",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.14.1",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.30",
    "pyjwt>=2.13.0",
    "pydantic-ai>=1.106.0",
    "alembic>=1.18.4",
    "trafilatura>=2.1.0",
    "llama-index-core>=0.14.23",
    "llama-index-embeddings-mistralai>=0.5.1",
    "llama-index-llms-mistralai>=0.10.2",
    "tenacity>=9.1.4",
]

[project.scripts]
start_db = "scripts.scripts:start_db"
stop_db = "scripts.scripts:stop_db"
api = "main:start"
init_db = "scripts.init_db:run"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scripts"]
